--- a/src/scss/forest.scss
+++ b/src/scss/forest.scss
@@ -3,6 +3,7 @@ body{
     box-sizing: border-box;
     font-family: 'Catamaran', sans-serif;
     margin: 0;
+    overflow: hidden;
 }
 
 .forest-container{
@@ -15,6 +16,7 @@ body{
 
     .avatar-logo{
         width: 70%;
+        position: relative;
         padding-bottom: 20%;
         margin: 0 auto;
         background-image: url(../../src/img/avatar-logo.png);
@@ -23,6 +25,7 @@ body{
         margin: 0 auto;
         margin-bottom: 5%;
         margin-top: 5%;
+        z-index: 10000;
     }
     
     .plant-glow-container{
@@ -45,17 +48,45 @@ body{
             img{
                 width: 100%;
             }
-        }  
+        }
+
+        .small-pink-glow{
+            position: absolute;
+            width: 42%;
+            left: 52%;
+            top: 1%;
+            opacity: 0;
+
+            img{
+                width: 100%;
+            }
+        }
+
+        
+
     }
+    .large-pink-glow{
+            width: 50%;
+            position: absolute;
+            left: 17%;
+            top: 3%;
+            opacity: 0;
+            
+
+            img{
+                width: 100%;
+            }
+        }
 
     .dinosaur-container{
         width: 100%;
         position: absolute;
+        z-index: 100;
 
         .dinosaur{
             width: 56%;
-            position: relative;
-            right: -120px;
+            position: absolute;
+            right: 52px;
             top: -10px;
             background-image: url(../../src/img/dinosaur.png);
             background-repeat: no-repeat;
